--- a/solver/Cargo.toml
+++ b/solver/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 derivative = "2.2.0"
+itertools = "0.12.0"
 ordered-float = "4.2.0"
 pathfinding = "4.8.2"
 prefix_tree = {path = "../prefix-tree"}
