--- a/solver/Cargo.toml
+++ b/solver/Cargo.toml
@@ -11,3 +11,5 @@ itertools = "0.12.0"
 ordered-float = "4.2.0"
 pathfinding = "4.8.2"
 prefix_tree = {path = "../prefix-tree"}
+regex = "1.10.3"
+reqwest = { version = "0.11.23", features = ["blocking"] }
