--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [workspace]
 resolver = "2"
 members = [
+    "frontend",
     "prefix-tree",
     "letter-boxed",
-    "frontend",
+    "crossword",
 ]
