--- a/crossword/Cargo.toml
+++ b/crossword/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bincode = "1.3.3"
 derivative = "2.2.0"
 itertools = "0.12.0"
 pathfinding = "4.9.1"
+serde = { version = "1.0.197", features = ["derive"] }
