--- a/crossword/Cargo.toml
+++ b/crossword/Cargo.toml
@@ -11,3 +11,4 @@ derivative = "2.2.0"
 itertools = "0.12.0"
 pathfinding = "4.9.1"
 serde = { version = "1.0.197", features = ["derive"] }
+tst = { git = "https://github.com/billyevans/tst", version = "0.12.1" }
